--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "homepage": "https://harikadanduprolu.github.io"
-
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -65,6 +64,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^22.5.5",
