--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "homepage": "https://harikadanduprolu.github.io"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
